--- a/task01_3/task01_3_xjweng.html
+++ b/task01_3/task01_3_xjweng.html
@@ -30,7 +30,7 @@
             background-color: #eee;
         }
 
-        
+
         .container:after, .container:before {
             clear: both;
             content: " ";
@@ -127,8 +127,7 @@
             <div class="icon" style="background: url(images/weng.jpg) no-repeat;background-size: cover"></div>
         </div>
         <div class="middle">
-            <h2>百度,ife,非在校团队,星际小队</h2>
-            <h3>张,星际,似水流年,awthink,零星落月</h3>
+            <h2>百度,ife,在校团队,Beyond队</h2>
             <address>
                 文章作者
                 <time>文章发表时间</time>
